# DistributedBloomFilter

./: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  simulacion.cpp
dataset/: data.txt  nombres.csv
include/: BloomFilter.cpp  BloomFilter.h  Simulation.cpp  Simulation.h  read_Data.cpp  read_Data.h  universalHash.cpp  universalHash.h
test/: blockTest.cpp  prueba_CheckEquality.cpp  prueba_add.cpp  prueba_probabilidadHU.cpp  prueba_search.cpp  prueba_searchTest.cpp  test_instensiveAdd.cpp
